# FloodsAndHealthTool

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  overview_floodshealth.md  overview_floodshealth.rst  pyproject.toml  pyproject.toml_old  readthedocs.yaml  search.html  sitemap.xml
1_quick_start/: index.html
1_quick_start - Copy/: index.html
Output/: adults_moz_masked.tif  output.txt
docs/: 1_quick_start.md  conf.py  index.md  index.rst  input.rst  overview.rst
examples/: QMRA example  sfincs_beira.txt  sfincs_beira_his.nc  sfincs_flood_depth_2019-03-08T06.tif.ovr  sfincs_flood_depth_2019-03-15T06.tif.ovr
examples/Data bronnen/: GHS_POP_E1975_GLOBE_R2019A_4326_9ss_V1_0_0_0.tif  GHS_POP_E1975_GLOBE_R2019A_4326_9ss_V1_0_0_0.tif.ovr  Model parameters QMRA.xlsx  Parameter_Dose_Response.csv  Parameter_Dose_Response.xlsx  (+9 more)
floodhealth/: 1) Importing HydroMT output and determining flood area  2) Population density in flooded area  Combine_ch_ad_popdens_3bands.ipynb  DALY.ipynb  Exposure.txt  Exposure_scenarios.yml  Population_age_tif_merge.ipynb  RIO bbox  SIRB_model.ipynb  SPRINT2Yaml.ipynb  SPRINT3_Update_JB.ipynb  Scenarios.txt  Scenarios_Pathogen.yml  Sprint_FloodsandHealth_results.ipynb  Sprint_SFINCS_UGRID_to_floodmap.ipynb  Untitled-1.ipynb  inspect_with_xugrid_IMOD_to_ugrid_nc.ipynb  main.py  merge_ad_ch_seperate_tif.ipynb  sprint1.ipynb  sprint1_VH.ipynb  testen_workflow.ipynb
search/: search_index.json
site/: index.html
tool/: Preprocessing_demographic_data.ipynb  SPRINT3_QMRAcleaner_JB.ipynb  Setup_scenario.ipynb  Toolstructure.readme
(+3 files in other folders)
