[tool.poetry]
name = "floodhealth"
version = "0.1.0"
description = "A Python based tool to assess the impact of flooding on health."
authors = ["Deltares"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
idna = "^3.4"
numpy = "^1.24.2"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
tifffile = "^2023.2.28"
certifi = "^2022.12.7"
descartes = "^1.1.0"
netcdf4 = "^1.6.3"
rasterio = "^1.3.6"
geopandas = "^0.12.2"
xarray = "^2023.2.0"
contextily = "^1.3.0"
ogr = "^0.44.0"
osr = "^0.0.1"
cartopy = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
isort = "^5.12.0"
flake8 = "^6.0.0"
pylint = "^2.17.0"
mock = "^5.0.1"
mkdocs = "^1.4.2"
pytest-cov = "^4.0.0"
black = "^23.1.0"
jupyter = "^1.0.0"
hydromt = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
